fix: ProfileInfo content width on mobile

--- a/src/components/ProfileInfo/ProfileInfo.less
+++ b/src/components/ProfileInfo/ProfileInfo.less
@@ -29,11 +29,16 @@
 
         .profile-bio-groups-container{
             width: 100%;
+            margin-bottom: 2rem;
 
             .profile-bio-component{
                 display: none;
             }
 
+        }
+
+        .profile-info-content {
+            width: 100%;
         }
     }
 }
